--- a/learning_logs/templates/learning_logs/index.html
+++ b/learning_logs/templates/learning_logs/index.html
@@ -1,11 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Learning Log</title>
-</head>
-<body>
-<p>Learning Log</p>
+{% extends "learning_logs/base.html" %}
+{% block content %}
 <p>Learning Log helps you keep track of your learning, for any topic you're learning about.</p>
-</body>
-</html>
+{% endblock content %}
