--- a/learning_logs/templates/learning_logs/topic.html
+++ b/learning_logs/templates/learning_logs/topic.html
@@ -3,6 +3,9 @@
 {% block content %}
 <h1>Topic: {{ topic }}</h1>
 <p>Entries</p>
+<p>
+    <a href="{% url 'learning_logs:new_entry' topic.id %}">Add new entry</a>
+</p>
 
 <ul>
     {% for entry in entries %}
