--- a/learning_logs/templates/learning_logs/edit_entry.html
+++ b/learning_logs/templates/learning_logs/edit_entry.html
@@ -3,11 +3,11 @@
 {% block content %}
     <p><a href="{% url 'learning_logs:topic' topic.id %}">{{ topic }}</a></p>
 
-    <p>Add new entry:</p>
-    <form action="{% url 'learning_logs:new_entry' topic.id %}" method="post">
+    <p>Edit entry:</p>
+    <form action="{% url 'learning_logs:edit_entry' topic.id %}" method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <button name="submit">Add entry</button>
+        <button name="submit">Save changes</button>
     </form>
 
 {% endblock content %}
