--- a/learning_logs/templates/learning_logs/base.html
+++ b/learning_logs/templates/learning_logs/base.html
@@ -5,7 +5,13 @@
 </head>
 <h1>
     <a href="{% url 'learning_logs:index' %}">Learning Logs</a> -
-    <a href="{% url 'learning_logs:topics' %}">Topics</a>
+    <a href="{% url 'learning_logs:topics' %}">Topics</a> -
+    {% if user.is_authenticated %}
+        Hello, {{user.username}}
+        <a href="{% url 'users:logout' %}">Log out</a>
+    {% else %}
+        <a href="{% url 'users:login' %}">Log in</a>
+    {% endif %}
 </h1>
 {% block content %}
 {% endblock content %}
