--- a/learning_logs/templates/learning_logs/base.html
+++ b/learning_logs/templates/learning_logs/base.html
@@ -10,6 +10,7 @@
         Hello, {{user.username}}
         <a href="{% url 'users:logout' %}">Log out</a>
     {% else %}
+        <a href="{% url 'users:register' %}">Register</a> -
         <a href="{% url 'users:login' %}">Log in</a>
     {% endif %}
 </h1>
