--- a/users/templates/registration/register.html
+++ b/users/templates/registration/register.html
@@ -1,11 +1,16 @@
 {% extends "learning_logs/base.html" %}
+{% load bootstrap4 %}
 
+{% block page_header %}
+    <h3>Registration</h3>
+{% endblock page_header %}
 {% block content %}
     <form method="post" action="{% url 'users:register' %}">
         {% csrf_token %}
-        {{ form.as_p }}
-
-        <button name="submit">Register</button>
+        {% bootstrap_form form %}
+        {% buttons %}
+            <button name="submit" class="btn btn-primary">Register</button>
+        {% endbuttons %}
         <input type="hidden" name="next" value="{% url 'learning_logs:index' %}" />
     </form>
 {% endblock content %}
